     `None` in this case.
   * Fixed a crash when --repl-output-fn raises an exception
   * `assoc` now evaluates its arguments only once each
   * `break` and `continue` now raise an error when given arguments
     instead of silently ignoring them
   * Multiple expressions are now allowed in the else clause of
     a for loop

   [ Misc. Improvements ]
   * `read`, `read_str`, and `eval` are exposed and documented as top-level
     functions in the `hy` module

Changes from 0.12.1

   [ Language Changes ]
   * Pythons 2.6, 3.0, 3.1, and 3.2 are no longer supported
   * `let` has been removed. Python's scoping rules do not make a proper
     implementation of it possible. Use `setv` instead.
   * `lambda` has been removed, but `fn` now does exactly what `lambda` did
   * `defreader` has been renamed to `defsharp`; what were previously called
     "reader macros", which were never true reader macros, are now called
     "sharp macros"
   * `try` now enforces the usual Python order for its elements (`else` must
     follow all `except`s, and `finally` must come last). This is only a
     syntactic change; the elements were already run in Python order even when
     defined out of order.
   * `try` now requires an `except` or `finally` clause, as in Python
   * Importing or executing a Hy file automatically byte-compiles it, or loads
     a byte-compiled version if it exists and is up to date. This brings big
     speed boosts, even for one-liners, because Hy no longer needs to recompile
     its standard library for every startup.
   * Added bytestring literals, which create `bytes` objects under Python 3
     and `str` objects under Python 2
   * Commas and underscores are allowed in numeric literals
   * Many more operators (e.g., `**`, `//`, `not`, `in`) can be used
     as first-class functions
   * The semantics of binary operators when applied to fewer or more
     than two arguments have been made more logical